--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,109 @@
-absl-py==2.3.1
+absl-py==2.4.0
+altair==5.5.0
+annotated-types==0.7.0
 astunparse==1.6.3
-certifi==2025.10.5
-charset-normalizer==3.4.3
+attrs==25.4.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+cloudpickle==3.1.2
 contourpy==1.3.3
 cycler==0.12.1
-flatbuffers==25.9.23
-fonttools==4.60.1
-gast==0.6.0
+dask==2026.1.2
+dask-jobqueue==0.9.0
+distributed==2026.1.2
+flake8==7.3.0
+flatbuffers==25.12.19
+flyr==4.0.0
+fonttools==4.61.1
+fsspec==2026.2.0
+gast==0.7.0
 google-pasta==0.2.0
-grpcio==1.75.1
-h5py==3.14.0
-idna==3.10
-keras==3.11.3
+grpcio==1.78.0
+h5py==3.15.1
+idna==3.11
+ImageIO==2.37.2
+Jinja2==3.1.6
+joblib==1.5.3
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+keras==3.13.2
 kiwisolver==1.4.9
+lazy_loader==0.4
 libclang==18.1.1
-Markdown==3.9
+llvmlite==0.46.0
+locket==1.0.0
+Markdown==3.10.1
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib==3.10.7
+matplotlib==3.10.8
+mccabe==0.7.0
 mdurl==0.1.2
-ml_dtypes==0.5.3
+ml_dtypes==0.5.4
+mpmath==1.3.0
+msgpack==1.1.2
 namex==0.1.0
-numpy==2.2.6
-opencv-python==4.12.0.88
+narwhals==2.16.0
+nd2==0.11.2
+networkx==3.6.1
+numba==0.63.1
+numpy==2.3.5
+ome-types==0.6.3
+onnxruntime==1.24.1
+opencv-python==4.13.0.92
 opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pillow==11.3.0
-protobuf==6.32.1
+optree==0.18.0
+packaging==26.0
+pandas==3.0.0
+partd==1.4.2
+patsy==1.0.2
+pillow==12.1.0
+plantcv==4.10.2
+platformdirs==4.5.1
+pooch==1.9.0
+protobuf==6.33.5
+psutil==7.2.2
+pycodestyle==2.14.0
+pydantic==2.12.5
+pydantic-extra-types==2.11.0
+pydantic_core==2.41.5
+pyflakes==3.4.0
 Pygments==2.19.2
-pyparsing==3.2.5
+PyMatting==1.1.15
+pyparsing==3.3.2
 python-dateutil==2.9.0.post0
+PyYAML==6.0.3
+referencing==0.37.0
+rembg==2.0.72
 requests==2.32.5
-rich==14.2.0
-setuptools==80.9.0
+resource-backed-dask-array==0.1.0
+rich==14.3.2
+rpds-py==0.30.0
+scikit-image==0.26.0
+scikit-learn==1.8.0
+scipy==1.17.0
+setuptools==81.0.0
 six==1.17.0
+sortedcontainers==2.4.0
+statsmodels==0.14.6
+sympy==1.14.0
+tblib==3.2.2
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
-termcolor==3.1.0
+termcolor==3.3.0
+threadpoolctl==3.6.0
+tifffile==2026.1.28
+toolz==1.1.0
+tornado==6.5.4
+tqdm==4.67.3
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-urllib3==2.5.0
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.3
+urllib3==2.6.3
+vl-convert-python==1.9.0.post1
+Werkzeug==3.1.5
+wheel==0.46.3
+wrapt==2.1.1
+xarray==2026.1.0
+xsdata==26.1
+zict==3.0.0
